# fastapi-basic

./: README.md  main.py  mainlist.py  pyproject.toml
templates/: city_list.html
